--- a/BuzzAdBenefit.podspec.tmpl
+++ b/BuzzAdBenefit.podspec.tmpl
@@ -1,6 +1,6 @@
 Pod::Spec.new do |s|
   s.platform = :ios
-  s.ios.deployment_target = '8.0'
+  s.ios.deployment_target = '9.0'
   s.requires_arc = true
 
   s.name = "BuzzAdBenefit"
@@ -15,9 +15,12 @@ Pod::Spec.new do |s|
     :http => "https://github.com/Buzzvil/buzzad-benefit-sdk-publisher-ios/releases/download/{{ (ds "event").release.tag_name }}/BuzzAdBenefit.zip"
   }
 
-  s.dependency 'AFNetworking', '~> 3.0'
-  s.dependency 'SDWebImage', '~> 4.0'
-  s.dependency 'SDWebImage/WebP', '~> 4.0'
+  s.dependency 'AFNetworking', '~> 4.0'
+  s.dependency 'SDWebImage', '~> 5.0'
+  s.dependency 'SDWebImageWebPCoder'
+  s.dependency 'GoogleAds-IMA-iOS-SDK', '~> 3.11.3'
+  s.dependency 'ReactiveObjC', '~> 3.1.1'
 
+  s.framework = 'AppTrackingTransparency'
   s.vendored_frameworks = ['BuzzAdBenefit.framework', 'BuzzAdBenefitNative.framework', 'BuzzAdBenefitInterstitial.framework', 'BuzzAdBenefitFeed.framework', 'BuzzAdBenefitWebInterface.framework']
 end
